--- a/project/project1/index.html
+++ b/project/project1/index.html
@@ -9,6 +9,11 @@
 
 </body>
 
-  To Start changing fornt for your selected text follow instructions below:
+  To Start changing font for your selected text follow instructions below:
+  <p> 
+  <li>Go to the browser window</li>
+  <li>Drag mouse on desired text area, click copy</li>
+  <li>Come back to this window and </li>
+  </p>
   
 </html>
