--- a/projects/project1/index.html
+++ b/projects/project1/index.html
@@ -5,6 +5,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Font Changing Extension</title>
  <script src="extension.js"></script>
+ <script src="manifest.json"></script>
 </head>
 
 <body>
